# Geopoly

./: .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  README.md  README.pt-BR.md  pyproject.toml  requirements.txt  run_geopoly.py
docs/: ARCHITECTURE.md  STATEMENT_OF_NEED.md  VALIDATION.md
examples/: batch_platonic_demo.py  export_smoke_demo.py  run_self_tests.py
geopoly/: __init__.py  app.py  batch_optimizer.py  catalog.py  certified_nets.py  exporters.py  fabrication.py  formula_lab.py  geometry.py  gui.py  johnson.py  nesting.py  nets.py  runtime.py  runtime_no_allow.py  selftests.py  symmetry.py  topology.py  wireframe.py
geopoly/internal/: batch_optimizer.py  core_geometry_catalog.py  export_smoke_universal.py  fixed_scale_nesting.py  johnson_toroidal_certified.py  printable_nets.py  sota_topology_symmetry.py  wireframe_core.py  wireframe_mechanical_formula_symmetry.py
paper/: paper.bib  paper.md
tests/: test_batch_optimizer.py  test_explicit_imports_v271b.py  test_explicit_imports_v271c.py  test_explicit_imports_v271d.py  test_imports.py  test_internal_batch_optimizer_consolidation_v272c.py  test_internal_class_method_patch_consolidation_v272d.py  test_internal_class_native_methods_v272g.py  test_internal_nesting_tiling_consolidation_v272b.py  test_internal_net_certification_consolidation_v272a.py  test_internal_no_globals_update_v272e.py  test_no_runtime_remerge_v271e.py  test_runtime_allowlist_audit_v272h.py  test_selftests.py
