[build-system]
requires=["setuptools>=61"]
build-backend="setuptools.build_meta"

[project]
name="geopoly"
version="27.3.1"
description="Educational and maker-oriented polyhedra laboratory with verified printable nets and batch material optimization"
authors=[{name="Renato Dutra Pereira Filho"}]
readme="README.md"
keywords=["polyhedra", "education", "fabrication", "printable-nets", "computational-geometry"]
requires-python=">=3.9"
license="MIT"
dependencies=["numpy>=1.23","matplotlib>=3.6"]

[project.scripts]
geopoly="geopoly.app:main"

[tool.pytest.ini_options]
pythonpath=["."]
testpaths=["tests"]
